# Turmite

./: .gitignore  CMakeLists.txt  README.md  input_turmite.txt  turmite_v01.sln  turmite_v01.vcxproj  turmite_v01.vcxproj.filters
GLutils/: glsl.cpp  glsl.h
cmake/: cmake_all.bat  cmake_one.bat
cmake/modules/: FindDevIl.cmake
executable/: input_langton.txt  input_turmite.txt  settings.txt
src/: Map.cpp  Map.h  Turmite.cpp  Turmite.h  Viewer.cpp  Viewer.h  main.cpp
